--- a/moving-to-mastery-client/package.json
+++ b/moving-to-mastery-client/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ramses1998.github.io/moving-to-mastery-client",
+  "homepage": "https://movingtomastery.github.io/moving-to-mastery-app/moving-to-mastery-client",
   "name": "moving-to-mastery-client",
   "version": "0.1.0",
   "private": true,
